# AIDigitalWorkforce

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  checklist.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  plan.md  prd.md  project-structure.md  start.sh  stop.sh
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  init_db.py  init_mysql.py  main.py  nul  pyproject.toml  requirements.txt  setup.bat  setup.sh  test_all_messages.py  test_api.py  test_api_simple.py  test_content_fix.py  test_full_content.py  test_markdown_rendering.py  test_orchestrator.py
backend/2/: pyvenv.cfg
backend/app/: __init__.py  config.py  database.py
backend/app/agents/: __init__.py  analyst.py  base.py  orchestrator.py  orchestrator_fixed.py  researcher.py  writer.py
backend/app/agents/prompts/: analyst.txt  researcher.txt  writer.txt
backend/app/api/routes/: __init__.py  health.py  messages.py  tasks.py
backend/app/models/: __init__.py  base.py  message.py  task.py
backend/app/schemas/: __init__.py  agent.py  message.py  task.py
backend/app/services/: __init__.py  task_service.py
backend/app/tools/: __init__.py  llm_client.py  web_search.py
backend/app/websocket/: __init__.py  manager.py
docs/: API.md  CONTRIBUTING.md
frontend/: .env.example  Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: index.ts
frontend/src/pages/: Home.tsx  TaskDetail.tsx  index.ts
(+15 files in other folders)
